--- a/03-DOM&HandlingEvents/translate.html
+++ b/03-DOM&HandlingEvents/translate.html
@@ -5,11 +5,16 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<h3 onmouseover="textPL(this)">Sticks and stones may break my bones, but words will never harm me.</h3>
+		<h3 onmousemove="textPL(this)" onmouseout="primaryText()">Sticks and stones may break my bones, but words will never harm me.</h3>
 		<script>
+			const h3 = document.querySelector('h3');
 			function textPL(element){
-				element.innerHTML = "Kije i kamienie kości mi połamią, ale twoje słowa nigdy mnie nie zranią"
+				element.innerHTML = "Kije i kamienie kości mi połamią, ale twoje słowa nigdy mnie nie zranią";
 			}
+			function primaryText(){
+				document.querySelector("h3").innerHTML = "Sticks and stones may break my bones, but words will never harm me.";
+			}
+			
 		</script>
 	</body>
 </html>
