--- a/04-JSON&DataTransfer/student.html
+++ b/04-JSON&DataTransfer/student.html
@@ -11,6 +11,33 @@
 		<p id="personalData"></p>
 
 		<script>
+			function connect(){
+
+				return new Promise((resolve, reject)=>{
+					const method = 'GET';
+					const xhr = new XMLHttpRequest();
+					const URL = 'me.json';
+
+					xhr.addEventListener('readystatechange', () =>{
+						if(xhr.readyState === 4 && xhr.status === 200){
+							const data = JSON.parse(xhr.responseText);
+							resolve(data)
+						}else if(xhr.readyState === 4){
+							reject('error getting data');
+						}
+					})
+					xhr.open(method, URL);
+					xhr.send();
+				})
+			}
+
+			const getData= () =>{
+			connect()
+				.then(data => document.querySelector('p').innerHTML = `Hi, I am ${data.name} ${data.surname}`)
+				.catch(err => console.log('some error', error));
+			}
+
+			document.querySelector('input').addEventListener('click', getData)
 
 		</script>
 
