--- a/05-VueFundamentals/address.html
+++ b/05-VueFundamentals/address.html
@@ -4,7 +4,14 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-  <h1>Address</h1>    
+  <h3>Address</h3> 
+  <div id="app">
+    <p>{{ name }} {{ surname }}</p>
+    <p> {{ address }}, {{ city }}</p>
+    <p> {{postcode}} </p>
+  </div>
+
+     
 
   <script>
     var app = new Vue({
