--- a/05-VueFundamentals/company.html
+++ b/05-VueFundamentals/company.html
@@ -2,8 +2,33 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <style>
+      #app{
+        border: 1px solid black;
+        margin: 20px auto;
+        text-align: center;
+        width: 550px;
+        padding: 30px;
+      }
+
+      #app #name{
+        text-transform: uppercase;
+        font-weight: 600;
+      }
+
+    </style>
+
 </head>
 <body>
+  <div id="app">
+    <p id="name"> {{ company }} </p>
+    <p> {{ address }} </p>
+    <p> {{ postcode }} {{ city }} </p>
+    <p> tel. {{ landline }}, {{ mobile }} </p>
+    <a v-bind:href="web"> {{ web }} </a>
+  </div>
+
   <script>
     var app = new Vue({
       el: '#app',
