--- a/05-VueFundamentals/todo.html
+++ b/05-VueFundamentals/todo.html
@@ -2,8 +2,23 @@
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <style>
+      ul li{
+        list-style-type: decimal;
+      }
+    </style>
+
 </head>
 <body>
+
+  <div id="app">
+    <h2>DO WYKONANIA</h2>
+    <ul>
+      <li v-for="el in toDoSorted"> {{el}} </li>
+    </ul>
+  </div>
+
   <script>
     var app = new Vue({
       el: '#app',
@@ -13,6 +28,12 @@
           'Feed cat',
           'Pay cable bill',
           'Go shopping'
+        ]
+      },
+      computed:{
+        toDoSorted:function(){
+          return this.todo.sort();
+        }
       }
     });
   </script>
