--- a/06-VueDataBinding/bmi.html
+++ b/06-VueDataBinding/bmi.html
@@ -7,15 +7,22 @@
   <h1>Body Mass Index</h1>
   <div id="app">
     <span>Waga: </span>
-    <input> kg<br>
+    <input v-model="weight"> kg<br>
     <span>Wzrost: </span>
-    <input> cm
-    <p>Wskaźnik BMI:</p>
+    <input v-model="height"> cm
+    <p>Wskaźnik BMI: {{bmi}}</p>
   </div>
   <script>
     var app = new Vue({
       el: '#app',
       data: {
+        weight: 0,
+        height: 0
+      },
+      computed:{
+        bmi:function(){
+          return (this.weight / (Math.pow(this.height / 100, 2))).toFixed(2);
+        }
       }
     });
   </script>
